--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <header class="header">
                 <img class="logo" src="img/logo.png" alt="logo">
 
-                <form action="#">
+                <form action="#" class="search">
                     <input type="text" class="search__input" placeholder="Search hotels">
                     <button class="search__button">
                         <svg class="search__icon">
@@ -23,6 +23,29 @@
                         </svg>
                     </button>
                 </form>
+
+                <nav class="user-nav">
+
+                    <div class="user-nav__icon-box">
+                        <svg class="user-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-bookmark"></use>
+                        </svg>
+                        <span class="user-nav__notification">7</span>
+                    </div>
+
+                    <div class="user-nav__icon-box">
+                        <svg class="user-nav__icon">
+                            <use xlink:href="img/sprite.svg#icon-chat"></use>
+                        </svg>
+                        <span class="user-nav__notification">10</span>
+                    </div>
+
+                    <div class="user-nav__user">
+                        <img class="user-nav__user-photo" src="img/user.jpg" alt="user photo">
+                        <span class="user-nav__user-name">Jonas</span>
+                    </div>
+
+                </nav>
             </header>
             <div class="content">
                 <nav class="sidebar">
