--- a/index.html
+++ b/index.html
@@ -198,8 +198,20 @@
                                     <div class="review__rating">9.1</div>
                                 </figcaption>
                             </figure>
+
+                            <button class="btn-inline">Show all <span>&rarr;</span></button>
                         </div>
 
+                    </div>
+
+                    <div class="cta">
+                        <h2 class="cta__book-now">
+                            Good news! We have 3 free rooms for your selected dates!
+                        </h2>
+                        <button class="btn">
+                            <span class="btn__visible">Book now!</span>
+                            <span class="btn__invisible">Only 3 rooms left!</span>
+                        </button>
                     </div>
 
                 </main>
